syntax = "proto2";
package official_samples2;

message Test1 {
  optional int32 a = 1;
}

message Test2 {
  optional string b = 2;
}

message Test3 {
  optional Test1 c = 3;
}

message Test4 {
  repeated int32 d = 4 [packed=true];
}
